# LVE_Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  compile_shaders.sh  test.sh
shaders/: simple_triangle.frag  simple_triangle.frag.spv
src/: Makefile  a.out  device.hpp  first_app.cpp  first_app.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  swap_chain.cpp  swap_chain.hpp  test.cpp  watchdog.cpp  watchdog.hpp  window.cpp  window.hpp
src/shaders/: simple_triangle.frag  simple_triangle.frag.spv  simple_triangle.vert  simple_triangle.vert.spv
src/window/: window.cpp  window.hpp  window_event_interface.hpp  window_event_manager.cpp  window_event_manager.hpp
tests/: watchdog_test.cpp
